force-app/main/default/objects/MeetupRegistration__c/MeetupRegistration__c.object-meta.xml
<CustomObject>
    <description>This holds details about a single registration to a Meetup.</description>
    <label>MeetupRegistration</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MeetupRegistrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>