force-app/main/default/objects/MeetupRegistration__c/fields/Meetup__c.field-meta.xml
<CustomField>
    <fullName>Meetup__c</fullName>
    <description>The relationship with the parent Meetup object.</description>
    <label>Meetup</label>
    <referenceTo>Meetup__c</referenceTo>
    <relationshipLabel>MeetupRegistrations</relationshipLabel>
    <relationshipName>MeetupRegistrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>